package net.dskim.desingpattern.proxy;

public interface Resource {
    public String process();
}
