@startuml Proxy 패턴(김동석)

hide empty members
hide empty methods

title Proxy 패턴(김동석)
header https://github.com/bluedskim/javaDesignPatterns
footer 작성시각 %date("yyyy.MM.dd' 'HH:mm")


interface Resource {
	public String process()
}

class HeavyResource {
	public String process()
}

class Proxy {
	public String process()
}

class ProxyTest {
	void proxyTest()
}

Resource <|.. HeavyResource
Resource <|.. Proxy
Proxy -> HeavyResource

ProxyTest --> Resource

@enduml